[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth42"
version = "0.1.0"
description = "42 API認証とトークン管理ライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.14.2",
]

[project.scripts]
auth42 = "auth42.main:main"

[tool.hatch.build.targets.wheel]
packages = ["auth42"]
